<resources>
    <string name="app_name">Tracking Wristband System</string>
    <drawable name="color1">#CE0000</drawable>
    <drawable name="color2">#007979</drawable>
    <string name="title_activity_map_location">map_location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="CHN">中文</string>
    <string name="btn_WristbandLock">Lock the Wristband</string>
    <string name="btn_CurrentLocation">Current Location</string>
    <string name="btn_HistoryLocation">Historical Location</string>
    <string name="btn_HealthConditions">Health Conditions</string>
    <string name="btn_HistoryHealthConditions">Historical Health Condition</string>
    <string name="btn_AbnormalRecord">Abnormal Record</string>
    <string name="btn_showimage">ElectroCardioGraphy</string>
    <string name="tv_HealthConditionTitle">Health Conditon</string>
    <string name="tv_bloodOxygen">BloodOxygen</string>
    <string name="btn_Light">Light On</string>
    <string name="tv_Historicl_Location">Historicl Location</string>
    <string name="tv_HistoriclHealthConditons">Historicl Health Conditons</string>
    <string name="tv_State"> </string>
    <string name="tv_LastTime">Last Time</string>
    <string name="tv_Date"> </string>
    <string name="tv_AbnormalRecordTitle">Abnormal Record</string>
    <string name="Password">Password</string>
    <string name="Account">Account</string>
    <string name="Log_In">Log In</string>
    <string name="createAccount"><u>createAccount</u></string>
    <string name="Name">Name</string>
    <string name="Telephone">Telephone</string>
    <string name="Create_Account">Create Account</string>
    <string name="create">Create</string>
    <string name="Logout">Logout</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>


</resources>